@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.06-1
-Date: 2009-4-16
+Version: 0.06-2
+Date: 2009-4-18
 Title: Missing Data Imputation and Model Checking
 Author:
   Andrew Gelman <gelman@stat.columbia.edu>,
